Custom amount alignment issues
Bug fixes for 
* 119716
* 119719
* 119658

--- a/src/fieldday/sass/media-queries.scss
+++ b/src/fieldday/sass/media-queries.scss
@@ -372,7 +372,7 @@
           /* margin: 10px 0 0 !important; */
 
           input {
-            width: 100%;
+          /*  width: 100%; */
           }
         }
       }
@@ -679,7 +679,7 @@
 
           .custom-amount {
             input {
-              width: 75px;
+             // width: 75px;
             }
           }
         }
@@ -883,8 +883,8 @@
           }
 
           .custom-amount {
-            width: 31%;
-            margin: 8px 0 0 0 !important;
+            width: 40%;
+            margin: 28px 0 0 7px !important;
             float: left;
 
             label {
@@ -893,7 +893,7 @@
 
             input {
               // width: 100%;
-              height: 40px;
+              // height: 40px;
             }
           }
         }
